# drumkitgen

./: .gitignore  BRIEF.md  README.md  ROADMAP.md  pyproject.toml
src/drumkitgen/: __init__.py  analysis.py  audio.py  audition.py  classify.py  cli.py  ingest.py  io_yaml.py  layout.py  model.py  remix.py  report.py  slots.py  synth_probe.py
src/drumkitgen/render/: __init__.py  sfz.py
tests/: test_pipeline.py
